# text-format

./: .gitignore  .hgignore  .hgtags  .travis.yml  CHANGELOG.md  README.markdown  stack.yaml  text-format.cabal
.github/workflows/: haskell-ci.yml
Data/Text/: Buildable.hs  Format.hs
Data/Text/Format/: Functions.hs  Int.hs  Param.hs  Params.hs  RealFloat.hs  Types.hs
Data/Text/Format/RealFloat/: Fast.hs  Functions.hs
Data/Text/Format/RealFloat/Fast/: Internal.hs
Data/Text/Format/Types/: Internal.hs
benchmarks/: Benchmarks.hs  Makefile  Simple.hs  printf.c  sprintf.c  swprintf.c  wprintf.c
tests/: Makefile
